--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -164,6 +164,9 @@
     padding-top: 220px;
     margin-top: -200px;
     margin-bottom: 0;
+    position: relative;
+    z-index: 6;
+    background-color: var(--backgroundColor);
   }
 }
 @media only screen and (max-width: 900px) {
