--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -85,6 +85,9 @@ a.contact-social {
   .contact-section {
     margin-top: 50px;
     padding-bottom: 50px;
+    position: relative;
+    z-index: 6;
+    background-color: var(--backgroundColor);
   }
   .contact-container {
     width: calc(100% - 25px);
