--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -355,3 +355,9 @@ h2.landing-info-h2 {
     font-size: 75px;
   }
 }
+
+@media screen and (max-width: 1024px) {
+  .character-model {
+    z-index: 5 !important;
+  }
+}
