--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -208,6 +208,12 @@
   }
 } */
 @media only screen and (max-width: 1025px) {
+  .work-section {
+    position: relative;
+    z-index: 6;
+    background-color: var(--backgroundColor);
+    height: auto;
+  }
   .work-container {
     align-content: normal;
   }
